# publiccloud-wg

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
PublicCloudWG/: __init__.py
PublicCloudWG/tests/: test_PublicCloudWG.py
doc/source/: cloud-ledger.rst  conf.py  index.rst  passport_program.rst  passport_program_v2.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
openstack-publiccloud-wg/tests/: test_openstack-publiccloud-wg.py
releasenotes/source/: conf.py  index.rst
