[metadata]
name = publiccloud-wg
summary = Public Cloud Working Group Specs
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/publiccloud-wg
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1

[upload_sphinx]
upload-dir = doc/build/html
